# snapsort

./: README.md  app.py  output.md  pyproject.toml  snapsort.py
.github/workflows/: pylint.yml
