[tool.poetry]
name = "SnapSort"
version = "0.1.0"
description = ""
authors = ["Saikat Kumar Dey <deysaikatkumar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.35.0"
pillow = "^10.1.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
pandas = "^2.1.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
